fixed spacing/ added box shadows

--- a/static/styles.css
+++ b/static/styles.css
@@ -7,16 +7,18 @@ body {
 }
 
 .body-container {
-    width: 75%;
+    width: 70%;
     margin: 0 auto;
 }
 
 .timeline   {
     background-color: white;
     height: 200px;
-    width: 300px;
+    width: 410px;
     margin: 0;
     position: relative;
+    box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
+    border-radius:  5px;
 }
 
 h2  {
@@ -35,6 +37,21 @@ h2  {
     position: absolute;
     top: 0;
     right: 0;
+    border-top-right-radius: 5px;
+}
+
+.date-right {
+    background-color: #ff1c50;
+    color: white;
+    margin: 0px;
+    padding: 0;
+    width: 100px;
+    text-align: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-top-left-radius: 5px;
+
 }
 
 .float-right  {
@@ -51,7 +68,7 @@ h2  {
     border-width: 10px 10px 10px 0;
     border-color: transparent white transparent transparent;
     position: absolute;
-    left: -3%;
+    left: -2%;
     top: 12%;
 }
 
@@ -60,13 +77,13 @@ h2  {
     width: 0;
     height: 0;
     border-style: solid;
-    border-width: 10px 0px 10px 10px;
+    border-width: 10px 0px 18px 15px;
     border-color: transparent transparent transparent white;
 
 
     position: absolute;
     top: 12%;
-    right: -3%;
+    right: -2%;
 }
 .clearfix {
     clear: both;
@@ -87,15 +104,20 @@ h2  {
     height: 198%;
     border: solid 2px #006693;
     position: absolute;
-    right: -22%;
+    right: -65%;
     top: 0;
 }
 
-.left-border::after {
-    content: '';
-    height: 100%;
-    border: solid 2px #006693;
-    position: absolute;
-    left: -56px;
-    top: 0;
+/*.left-border::after {*/
+    /*content: '';*/
+    /*height: 100%;*/
+    /*border: solid 2px #006693;*/
+    /*position: absolute;*/
+    /*left: -56px;*/
+    /*top: 0;*/
+/*}*/
+
+.btn-more {
+    background-color: #006693;
+    color: #ffffff;
 }
